# bd_aging

./: CMakeLists.txt  Contracting_Vector3D.cu  Contracting_Vector3D.cuh  cell_locate.cu  colors.cu  encabezados.h  fself.cu  get_forces.cu  get_forces_poly.cu  get_gder_poly.cu  main.cu  polydispersity_IO.h  potentials.cu  run-fself.sh  run-system.sh  set_temp.cu  update_ermak.cu
